--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,8 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
-    "        return \n",
+    "        return alternative\n",
+    "    elif\n",
     "    pass"
    ]
   },
