--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,8 @@
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        return alternative\n",
-    "    elif len(restaurant['price']) > len(alternative['price']):\n",
+    "    elif len(restaurant['price']) < len(alternative['price']):\n",
+    "        return restaurant\n",
     "    pass"
    ]
   },
