--- a/index.ipynb
+++ b/index.ipynb
@@ -189,15 +189,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-6-1b0df135e085>, line 3)",
+     "evalue": "expected an indented block (<ipython-input-7-d33068767282>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-1b0df135e085>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    pass\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-d33068767282>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    pass\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -207,6 +207,8 @@
     "        return alternative\n",
     "    elif len(restaurant['price']) < len(alternative['price']):\n",
     "        return restaurant\n",
+    "    else:\n",
+    "        \n",
     "    pass"
    ]
   },
