--- a/index.ipynb
+++ b/index.ipynb
@@ -268,6 +268,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    for restaurant in \n",
     "    pass"
    ]
   },
