--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for restaurant in \n",
+    "    for restaurant in restaurants\n",
+    "    \n",
     "    pass"
    ]
   },
