--- a/index.ipynb
+++ b/index.ipynb
@@ -268,6 +268,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open_now = \n",
     "    for restaurant in restaurants:\n",
     "        if \n",
     "    pass"
