--- a/index.ipynb
+++ b/index.ipynb
@@ -268,9 +268,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_now = \n",
+    "    open_now = []\n",
     "    for restaurant in restaurants:\n",
-    "        if \n",
+    "        if restaurant\n",
     "    pass"
    ]
   },
