--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
     "def open_restaurants(restaurants):\n",
     "    open_now = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant\n",
+    "        if restaurant['is_closed'] \n",
     "    pass"
    ]
   },
