Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,8 @@
     "def open_restaurants(restaurants):\n",
     "    open_now = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed'] == False\n",
+    "        if restaurant['is_closed'] == False:\n",
+    "            open_now.ap\n",
     "    pass"
    ]
   },
