Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
     "    open_now = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            open_now.ap\n",
+    "            open_now.append(restaurant)\n",
     "    pass"
    ]
   },
