Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            open_now.append(restaurant)\n",
-    "                =\n",
+    "    return open_now\n",
     "    pass"
    ]
   },
